# CocktailFusion

./: .gitignore  Jenkinsfile-release  TUTO.md  docker-compose.yml
server/: .dockerignore  .env  .gitignore  Cargo.toml  Jenkinsfile.gerrit  Jenkinsfile.release  justfile
server/authentication/: .env  justfile  kratos-prod.yml  kratos.yml
server/authentication/config/kratos/: identity.schema.json
server/cli/: .env  Cargo.toml  justfile
server/cli/debian/: service
server/cli/src/: doc_count.rs  main.rs  topk.rs  topk_cooccurence.rs
server/cocktail-db-twitter/: .env  Cargo.toml  sqlx-data.json
server/cocktail-db-twitter/src/: lib.rs
server/cocktail-db-web/: .env.dist  .gitignore  Cargo.toml  corpus.sql  justfile  sqlx-data.json
server/cocktail-db-web/migrations/: 20220126142232_create-project-table.down.sql  20220126142232_create-project-table.up.sql  20220311084525_add_hashtags_info_into_project.down.sql  20220311084525_add_hashtags_info_into_project.up.sql  20220311151635_create-corpus-table.down.sql  20220311151635_create-corpus-table.up.sql  20220322155647_add_hidden_hashtag_list.down.sql  20220322155647_add_hidden_hashtag_list.up.sql  20220921120540_add_exclude_hashtag_list.down.sql  20220921120540_add_exclude_hashtag_list.up.sql  20220929090306_start_date-end_date-not-null.down.sql  20220929090306_start_date-end_date-not-null.up.sql  20221118150502_add_keywords_columns.down.sql  20221118150502_add_keywords_columns.up.sql  20221121155332_add_included_excluded_accounts.down.sql  20221121155332_add_included_excluded_accounts.up.sql  20221123163409_update_project_updated_at_column_type.down.sql  20221123163409_update_project_updated_at_column_type.up.sql  20221124133728_add_custom_date_column.down.sql  20221124133728_add_custom_date_column.up.sql  20230104094203_add_is_analyzed_bool.down.sql  20230104094203_add_is_analyzed_bool.up.sql  20230109092711_ajoute_table_chart.down.sql  20230109092711_ajoute_table_chart.up.sql  20230123145752_add_tweet_count.down.sql  20230123145752_add_tweet_count.up.sql  20230620100031_ajoute_count_auteurs.down.sql  20230620100031_ajoute_count_auteurs.up.sql  20230622100323_ajoute_hashtag_auteur_cache_list_tweet.down.sql  20230622100323_ajoute_hashtag_auteur_cache_list_tweet.up.sql  20230628082811_ajoute_list_hashtag_graph_tweet.down.sql  20230628082811_ajoute_list_hashtag_graph_tweet.up.sql  20230719095429_add_request_params.down.sql  20230719095429_add_request_params.up.sql  20230808083515_supprime_keywords_authors.down.sql  20230808083515_supprime_keywords_authors.up.sql  20230808142858_ajoute_project_user_id.down.sql  20230808142858_ajoute_project_user_id.up.sql  20230913133352_supprime_count_hashtag.down.sql  20230913133352_supprime_count_hashtag.up.sql
server/cocktail-db-web/src/: lib.rs  migration.rs
server/cocktail-graph-utils/: Cargo.toml
server/cocktail-graph-utils/src/: error.rs  lib.rs
server/cocktail-server/: .eleventy.js  .env  .gitignore  Cargo.toml  build.rs  gulpfile.js  justfile  package-lock.json  package.json  test_performance.md
server/cocktail-server/src/: error.rs  helpers.rs  lib.rs
server/cocktail-server/src/models/: auth.rs  templates.rs
server/cocktail-server/src/routes/: EXPORT_IMPROVEMENTS.md  collect.rs  csv_analyzer.rs  csv_import.rs  export_api.rs  mod.rs  paths.rs
server/cocktail-server/src/utils/: csv_analyzer.rs  csv_analyzer_test.rs  csv_errors.rs  mod.rs
server/cocktail-server/templates/: _authors_select.html  _hashtag_exclude_row.html  _hashtag_include_row.html  _hashtag_row.html  _header_right.html  _panel_analysis.html  _panel_collect.html  _panel_criteria.html  _panel_results.html  _request_form.html  accounts_popup.html  authors.html  collect.html  communities.html  connexion.html  csv_export.html  daterange.html  delete_popup.html  duplicate_popup.html  footer.html  hashtags.html  import.html  index.json  keywords_popup.html  preview_popup.html  project_layout.html  projets-popup.html  projets.html  rename_popup.html  request.html  result_hashtags.html  results.html  tweets.html
server/cocktail-server/templates/_data/: header.json  projects.json
server/cocktail-server/templates/_includes/: _aside_hashtags_chart.html  _aside_results.html  _aside_tweets_chart.html  _basket_item.html  _cart.html  _corpus_button_block.html  _corpus_toggle_form.html  _daterange_form.html  _exclude_hashtag_toggle_form.html  _hashtag_toggle_form.html  _hashtags_chart.html  _loader.html  _no_communities_data.html  _request_add_menu.html  _title_header.html  _toggle_all_visibility.html  _toggle_cooccurence_visibility.html  _toggle_hashtag_visibility.html  _tweets_chart.html
server/cocktail-server/templates/auth/: auth.html  chart.html  login.html  registration.html  registration_popin.html  tutoriel.html  ui.html  ui_node_anchor.html  ui_node_image.html  ui_node_input_button.html  ui_node_input_checkbox.html  ui_node_input_default.html  ui_node_input_password.html  ui_node_text.html  ui_nodes.html  vegan.html
server/cocktail-server/templates/frames/: hashtags_corpora.html  hashtags_topk.html
server/cocktail-server/templates/hashtags-popup/: _corpus.html  _search-result.html  _search.html  _topk.html  popup.html
server/cocktail-twitter-data/: Cargo.toml
server/cocktail-twitter-data/src/: ingest.rs  lib.rs
server/fts/: Cargo.toml
server/fts/src/: copy_index_data.rs  create_index_config.rs  ingest.rs  lib.rs
server/kratos/src/apis/: configuration.rs  metadata_api.rs  mod.rs  v0alpha2_api.rs
server/kratos/src/models/: admin_create_identity_body.rs  admin_create_identity_import_credentials_oidc.rs  admin_create_identity_import_credentials_oidc_config.rs  admin_create_identity_import_credentials_oidc_provider.rs  admin_create_identity_import_credentials_password.rs  admin_create_identity_import_credentials_password_config.rs  admin_create_self_service_recovery_link_body.rs  admin_identity_import_credentials.rs  (+76 more)
server/scripts-ub/: create-data-graph.R  dockerfile  postgres.R  viz.py
server/tweets-from-sql-to-json/: Cargo.toml  README.md
server/tweets-from-sql-to-json/src/: main.rs
(+86 files in other folders)
