[workspace]
members = [
    "cocktail-server",
    "tweets-from-sql-to-json",
    "cli",
    "cocktail-twitter-data",
    "cocktail-graph-utils",
    "cocktail-db-web",
    "cocktail-db-twitter",
    "fts",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
chronoutil = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.dev.package.tantivy]
opt-level = 3
