[workspace]
members = [
    "cocktail-server",
    "tweets-from-sql-to-json",
    "cli",
    "cocktail-twitter-data",
    "cocktail-graph-utils",
    "cocktail-db-web",
    "cocktail-db-twitter",
    "fts",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
chronoutil = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
axum = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev.package.tantivy]
opt-level = 3
