[package]
name = "cli"
version = "0.9.2"
edition = "2021"
authors = ["Mathieu Sanchez <msa@atolcd.com>"]
description = "Cocktail Web Application"

[[bin]]
name = "cocktail"
path = "src/main.rs"

[[bin]]
name = "doc_count"
path = "src/doc_count.rs"

[[bin]]
name = "topk"
path = "src/topk.rs"

[[bin]]
name = "topk_cooccurence"
path = "src/topk_cooccurence.rs"

[dependencies]
anyhow = "1.0.56"
chrono = { workspace = true }
clap = { version = "3.2.17", features = ["derive", "env"] }
cocktail-graph-utils = { path = "../cocktail-graph-utils" }
cocktail-server = { path = "../cocktail-server" }
cocktail-twitter-data = { path = "../cocktail-twitter-data" }
fts = { path = "../fts" }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
# tracing-tree = "0.2.0"
ulid = "1.0.0"
sqlx = { workspace = true, features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }

[package.metadata.deb]
name = "cocktail"
assets = [
  ["../target/release/cocktail", "/usr/local/bin/", "755"],
  ["../cocktail-server/templates/static/**/*", "/usr/local/lib/cocktail/assets", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false, unit-name = "cocktail" }
