[package]
name = "cocktail-db-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-trait = "0.1.52"
chrono = { workspace = true }
chronoutil = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "uuid", "json", "offline", "chrono"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
fts = { path = "../fts" }
