[package]
name = "cocktail-graph-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fts = { version = "0.1.0", path = "../fts" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
thiserror = "1"
tracing = "0.1"
cocktail-db-web = { path = "../cocktail-db-web" }
