[package]
name = "cocktail-server"
version = "0.1.0"
edition = "2021"
authors = ["Mathieu Sanchez <msa@atolcd.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = { version = "0.18.0" }
regex = "1"
anyhow = "1.0.56"
askama = { version = "0.11.0", features = ["serde-json"] }
axum = { version = "0.6.0-rc.1", features = ["headers", "multipart"] }
axum-extra = { version = "0.4.0-rc.1", features = ["typed-routing"] }
chrono = { workspace = true }
chronoutil = { workspace = true }
# clap = { version = "3.1.10", features = ["derive", "env"] }
cocktail-db-web = { path = "../cocktail-db-web" }
cocktail-twitter-data = { path = "../cocktail-twitter-data" }
cocktail-graph-utils = { path = "../cocktail-graph-utils" }
cocktail-db-twitter = { path = "../cocktail-db-twitter" }
fake = "2.4.3"
fts = { path = "../fts" }
handlebars = { version = "4.3.3", features = ["dir_source", "rust-embed"] }
hyper = "0.14.14"
mime_guess = "2.0.4"
ory-kratos-client = { path = "../kratos" }
rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "1"
# todo-or-die = { version = "0.1.2", features = ["time"] }
tokio = { workspace = true }
tower-http = { version = "0.2.0", features = ["fs", "compression-full", "trace"] }
tracing = "0.1"
ulid = "1.0.0"
# tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
# tracing-tree = "0.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = { version = "0.3.17" }
num-format = "0.4.4"
egg-mode = "0.16.0"
atproto = "0.1.0"
reqwest = { workspace = true, features = ["json"] }
async-trait = "0.1"
csv = "1.3"
glob = "0.3.1"