[package]
name = "cocktail-twitter-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
chrono = { workspace = true }
itertools = "0.10.3"
glob = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
thiserror = "1"
# todo-or-die = { version = "0.1.2", features = ["time"] }
