[package]
name = "tweets-from-sql-to-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "offline"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { workspace = true }